update tour entity
