# tour-service/app/database/sqlc/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.28.0
+//   sqlc v1.29.0
 
 package sqlc
 
@@ -15,9 +15,16 @@ type Tour struct {
 	Name          string    `json:"name"`
 	Description   string    `json:"description"`
 	HostID        uuid.UUID `json:"host_id"`
+	Price         int32     `json:"price"`
+	Level         string    `json:"level"`
+	Distance      int32     `json:"distance"`
+	Elevation     int32     `json:"elevation"`
+	Duration      string    `json:"duration"`
+	Location      string    `json:"location"`
+	Images        string    `json:"images"`
+	Rate          string    `json:"rate"`
 	Slot          int32     `json:"slot"`
 	AvailableSlot int32     `json:"available_slot"`
-	Price         int32     `json:"price"`
 	Status        string    `json:"status"`
 	StartAt       time.Time `json:"start_at"`
 	EndAt         time.Time `json:"end_at"`
