# tour-service/docs/swagger.json
@@ -8,7 +8,7 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/api/v1/tours": {
+        "/tours": {
             "get": {
                 "description": "Lấy danh sách tour theo phân trang",
                 "consumes": [
@@ -103,7 +103,7 @@
                 }
             }
         },
-        "/api/v1/tours/{id}": {
+        "/tours/{id}": {
             "get": {
                 "description": "Lấy chi tiết tour theo ID",
                 "consumes": [
@@ -254,13 +254,20 @@
             "required": [
                 "available_slot",
                 "description",
-                "end",
+                "distance",
+                "duration",
+                "elevation",
+                "end_at",
                 "host_id",
                 "id",
+                "images",
+                "level",
+                "location",
                 "name",
                 "price",
+                "rate",
                 "slot",
-                "start",
+                "start_at",
                 "status"
             ],
             "properties": {
@@ -271,10 +278,18 @@
                     "type": "string"
                 },
                 "description": {
-                    "type": "string",
-                    "minLength": 10
+                    "type": "string"
                 },
-                "end": {
+                "distance": {
+                    "type": "integer"
+                },
+                "duration": {
+                    "type": "string"
+                },
+                "elevation": {
+                    "type": "integer"
+                },
+                "end_at": {
                     "type": "string"
                 },
                 "host_id": {
@@ -283,18 +298,29 @@
                 "id": {
                     "type": "string"
                 },
+                "images": {
+                    "type": "string"
+                },
+                "level": {
+                    "type": "string"
+                },
+                "location": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string",
-                    "maxLength": 255,
-                    "minLength": 3
+                    "maxLength": 255
                 },
                 "price": {
                     "type": "integer"
                 },
+                "rate": {
+                    "type": "string"
+                },
                 "slot": {
                     "type": "integer"
                 },
-                "start": {
+                "start_at": {
                     "type": "string"
                 },
                 "status": {
@@ -324,8 +350,7 @@
             ],
             "properties": {
                 "description": {
-                    "type": "string",
-                    "minLength": 10
+                    "type": "string"
                 },
                 "end": {
                     "type": "string"
@@ -353,8 +378,7 @@
                 },
                 "title": {
                     "type": "string",
-                    "maxLength": 255,
-                    "minLength": 3
+                    "maxLength": 255
                 }
             }
         },
